--- a/galleria/themes/azure/galleria.azur.css
+++ b/galleria/themes/azure/galleria.azur.css
@@ -174,11 +174,15 @@ body .galleria-tooltip {
     background: url( 20.png );
     position: absolute;
     top: 10px;
-    right: 10px;
+    left: 10px;
     z-index: 2;
     display: none;
 }
 
+/* canvas { */
+/*     top: 10px; */
+/*     left: 10px; */
+/* } */
 .galleria-progress.nocanvas .galleria-progressbar {
     height: 100%;
     width: 0;
@@ -219,11 +223,12 @@ body .galleria-tooltip {
 .galleria-counter {
     opacity: 0;
     position: absolute;
-    top: 10px;
+    bottom: 40px;
     left: 10px;
     font-size: 10px;
     z-index: 2;
     font-weight: bold;
+	font-size: 2em;
 }
 .galleria-loader {
     width: 48px;
